force-app/main/default/objects/PD_Approval__c/PD_Approval__c.object-meta.xml
<CustomObject>
    <label>PD Approval</label>
    <nameField>
        <displayFormat>PDA-{0000}</displayFormat>
        <label>PD Approval ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PD Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>