force-app/main/default/objects/PD_Approval__c/fields/Additional_BR_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Additional_BR_Contributions__c</fullName>
    <inlineHelpText>Additional contribution from Better Rehab outside of the employee&apos;s total PD balance. If not applicable, enter 0.</inlineHelpText>
    <label>Additional BR Contribution</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>