force-app/main/default/objects/PD_Approval__c/fields/Approver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Approver_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Approver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PD Approvals</relationshipLabel>
    <relationshipName>PD_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>