force-app/main/default/objects/PD_Approval__c/fields/Approver_s_Internal_Banding__c.field-meta.xml
<CustomField>
    <fullName>Approver_s_Internal_Banding__c</fullName>
    <formula>TEXT(Approver_Contact__r.Internal_Banding__c)</formula>
    <label>Approver&apos;s Internal Banding</label>
    <type>Text</type>
</CustomField>