force-app/main/default/objects/PD_Approval__c/fields/Cost_from_Employee_s_Total_PD__c.field-meta.xml
<CustomField>
    <fullName>Cost_from_Employee_s_Total_PD__c</fullName>
    <inlineHelpText>Cost to be deducted from the employee&apos;s total PD balance (Annual PD + Better Rewards PD). If not applicable, enter 0.</inlineHelpText>
    <label>Cost from Employee&apos;s Total PD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>