force-app/main/default/objects/PD_Approval__c/fields/Cost_of_Course__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Course__c</fullName>
    <formula>PD_Request__r.Cost_of_Course__c</formula>
    <label>Cost of Course</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>