force-app/main/default/objects/PD_Approval__c/fields/Course_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Course_Date_1__c</fullName>
    <formula>PD_Request__r.Course_Date_1__c</formula>
    <label>Course Date 1</label>
    <type>Date</type>
</CustomField>