force-app/main/default/objects/PD_Approval__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <formula>TEXT(PD_Request__r.Course_Name__c)</formula>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>