force-app/main/default/objects/PD_Approval__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>IF( Approver_Contact__r.enrtcr__User__r.Id =  $User.Id, TRUE, FALSE)</formula>
    <label>Current User</label>
    <type>Checkbox</type>
</CustomField>