force-app/main/default/objects/PD_Approval__c/fields/Employee_s_Total_PD__c.field-meta.xml
<CustomField>
    <fullName>Employee_s_Total_PD__c</fullName>
    <formula>PD_Request__r.Employee_Name__r.Total_Remaining_PD_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Employee&apos;s total PD balance (Annual PD + Better Rewards PD)</inlineHelpText>
    <label>Employee&apos;s Total PD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>