force-app/main/default/objects/PD_Approval__c/fields/PD_Request__c.field-meta.xml
<CustomField>
    <fullName>PD_Request__c</fullName>
    <label>PD Request</label>
    <referenceTo>PD_Request__c</referenceTo>
    <relationshipLabel>PD Approvals</relationshipLabel>
    <relationshipName>PD_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>