force-app/main/default/objects/PD_Approval__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>CASE(Approver_Contact__r.Id,
PD_Request__r.Regional_Manager__c, &apos;Regional Manager&apos;,
PD_Request__r.State_Manager__c, &apos;State Manager&apos;,
PD_Request__r.Principal_Clinician__c, &apos;Principal Clinician&apos;,
PD_Request__r.Dept_Manager_ID__c , &apos;Department Manager&apos;,
PD_Request__r.Direct_Supervisor_ID__c, IF(PD_Request__r.Direct_Supervisor_ID__c = PD_Request__r.Regional_Manager__c, &apos;Regional Manager&apos;, &apos;Direct Supervisor&apos;),
&apos;N/A&apos;
)</formula>
    <label>Position</label>
    <type>Text</type>
</CustomField>