force-app/main/default/objects/PD_Approval__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <formula>PD_Request__r.Employee_Name__r.enrtcr__Full_Name__c</formula>
    <label>Requested By</label>
    <type>Text</type>
</CustomField>