force-app/main/default/objects/PD_Approval__c/fields/Subsidized_Cost__c.field-meta.xml
<CustomField>
    <fullName>Subsidized_Cost__c</fullName>
    <inlineHelpText>The total cost that will be covered by Better Rehab</inlineHelpText>
    <label>Subsidized Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>