force-app/main/default/objects/PD_Approval__c/fields/Total_Subsidised_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Subsidised_Cost__c</fullName>
    <formula>Additional_BR_Contributions__c +  Cost_from_Employee_s_Total_PD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Subsidised Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>