force-app/main/default/objects/PD_Approval__c/validationRules/Restrict_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Edit</fullName>
    <active>true</active>
    <description>Restrict PD approval to only the authorised approver.</description>
    <errorConditionFormula>AND(
 Bypass_Validation_Rule__c = FALSE,
	NOT(ISNEW()),
	 $User.Id  != Approver_Contact__r.enrtcr__User__r.Id
)</errorConditionFormula>
    <errorMessage>You do not have permission to edit this PD Approval</errorMessage>
</ValidationRule>