force-app/main/default/objects/PD_Approval__c/validationRules/Write_Comment_for_Denied_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Write_Comment_for_Denied_Request</fullName>
    <active>true</active>
    <description>Compulsory for denied approval to be provided with an explanation</description>
    <errorConditionFormula>AND(
TEXT(  Status__c ) = &quot;Denied&quot;,
ISBLANK(  Comment__c )
)</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Please write a comment</errorMessage>
</ValidationRule>