force-app/main/default/objects/PD_Approval__c/listViews/My_PD_Approvals.listView-meta.xml
<ListView>
    <fullName>My_PD_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Approver_Contact__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Requested_by__c</columns>
    <columns>Status__c</columns>
    <columns>Subsidized_Cost__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My PD Approvals</label>
</ListView>